<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.gentics</groupId>
	<artifactId>cms-oss</artifactId>
	<version>6.1.22</version>
	<name>Gentics CMS OSS - Project Root</name>
	<packaging>pom</packaging>
	<description>This is the project root</description>
	<url>https://www.gentics.com/</url>

	<licenses>
		<license>
			<name>Gentics Software GmbH - Commercial License</name>
			<url>https://www.gentics.com/licenses/LICENSE.txt</url>
		</license>
	</licenses>

	<scm>
		<connection>scm:git:git@github.com:gentics/cms-oss.git</connection>
		<developerConnection>scm:git:git@github.com:gentics/cms-oss.git</developerConnection>
		<url>https://github.com/gentics/cms-oss</url>
	</scm>

	<modules>
		<module>cms-oss-bom</module>
		<module>base-api</module>
		<module>base-lib</module>
		<module>cms-restapi</module>
		<module>cms-api</module>
		<module>cms-core</module>
		<module>cms-js-lib</module>
		<module>cms-aloha-plugins</module>
		<module>cms-aloha-bundle</module>
		<module>cms-ui</module>
		<module>cms-cache</module>
		<module>cms-oss-server</module>
		<module>cms-oss-changelog</module>
		<module>cms-oss-doc</module>
		<module>cms-integration-tests</module>
	</modules>

	<properties>
		<!-- Dynamic third party dependencies -->
		<alohaeditor.version>2.0.7</alohaeditor.version>

		<!-- dd.MM.YYYY -->
		<alohaeditor.date>04.12.2024</alohaeditor.date>
		<!-- Dependency to Mesh Client Version. Tested Mesh Server Version is defined with com.gentics.contentnode.testutils.mesh.MeshContext.TESTED_MESH_VERSION -->
		<mesh.version>2.1.10</mesh.version>
		<mesh.forms.plugin.version>2.1.0</mesh.forms.plugin.version>

		<!-- When updating the dependency to jersey, also update the dependencies to jetty and jackson accordingly -->
		<jersey.version>2.42</jersey.version>
		<jetty.version>9.4.54.v20240208</jetty.version>
		<jackson.version>2.17.0</jackson.version>

		<enunciate.version>2.15.1</enunciate.version>
		<jjwt.version>0.11.0</jjwt.version>
		<nimbus-jose-jwt.version>9.37.3</nimbus-jose-jwt.version>
		<mockito.version>5.0.0</mockito.version>
		<powermock.version>2.0.9</powermock.version>
		<testcontainers.version>1.17.6</testcontainers.version>
		<jsonpath.version>2.6.0</jsonpath.version>
		<log4j.version>2.23.1</log4j.version>
		<xerces.version>2.12.2</xerces.version>
		<xalan.version>2.7.3</xalan.version>
		<xml.apis.version>1.4.01</xml.apis.version>
		<imageio.version>3.9.4</imageio.version>
		<scrimage.webp.version>4.1.3</scrimage.webp.version>
		<tika.version>1.28.5</tika.version>
		<commons.fileupload.version>1.5</commons.fileupload.version>
		<commons.beanutils.version>1.9.4</commons.beanutils.version>
		<commons.codec.version>1.16.1</commons.codec.version>
		<nekohtml.version>1.9.22</nekohtml.version>
		<spring.version>6.2.3</spring.version>
		<org.json.version>20240303</org.json.version>
		<commons-text.version>1.11.0</commons-text.version>
		<commons-io.version>2.16.1</commons-io.version>

		<!-- TODO: integrate generic-testutils -->
		<generic-testutils.version>1.15.8</generic-testutils.version>
		<skip.integration.tests>false</skip.integration.tests>
		<skip.unit.tests>false</skip.unit.tests>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.build.timestamp.format>yyyyMMdd-HHmmss</maven.build.timestamp.format>
		<mavenRootBuildTimestamp>${maven.build.timestamp}</mavenRootBuildTimestamp>
		<test.jvm.home>${env.JAVA_HOME}</test.jvm.home>
		<assertj.version>3.4.1</assertj.version>
		<hsqldb.version>2.7.2</hsqldb.version>

		<surefire.version>3.1.2</surefire.version>
		<surefire.forkcount>16</surefire.forkcount>
		<surefire.forkcount.mesh>4</surefire.forkcount.mesh>
		<!-- Since we have some glitch tests, we rerun failing tests once -->
		<surefire.rerunFailingTestsCount>1</surefire.rerunFailingTestsCount>
		<surefireArgLine>-Xms128m -Xmx512m --add-opens=java.base/java.lang=ALL-UNNAMED</surefireArgLine>
	</properties>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-war-plugin</artifactId>
				<configuration>
					<archive>
						<addMavenDescriptor>false</addMavenDescriptor>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<configuration>
					<goals>deploy -Dskip.unit.tests=true</goals>
					<completionGoals>scm:checkin -Dmessage="Added generated changelog mapping" -Dbasedir=${project.basedir}/ -Dincludes=contentnode-changelog/src/changelog/mappings/**</completionGoals>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>versions-maven-plugin</artifactId>
				<executions>
					<execution>
						<phase>prepare-package</phase>
						<goals>
							<goal>dependency-updates-aggregate-report</goal>
						</goals>
						<configuration>
							<formats>xml</formats>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-checkstyle-plugin</artifactId>
					<version>2.9.1</version>
					<configuration>
						<enableRulesSummary>false</enableRulesSummary>
						<configLocation>com/gentics/checkstyle/gentics_checks.xml</configLocation>
						<encoding>UTF-8</encoding>
						<failOnViolation>false</failOnViolation>
						<skip>${skip.static.analysis}</skip>
					</configuration>
					<executions>
						<execution>
							<goals>
								<goal>check</goal>
							</goals>
						</execution>
					</executions>
					<dependencies>
						<dependency>
							<groupId>com.gentics</groupId>
							<artifactId>generic-testutils</artifactId>
							<version>${generic-testutils.version}</version>
						</dependency>
					</dependencies>
				</plugin>
				<plugin>
					<groupId>com.github.spotbugs</groupId>
					<artifactId>spotbugs-maven-plugin</artifactId>
					<version>4.7.0.0</version>
					<configuration>
						<failOnError>false</failOnError>
						<effort>Max</effort>
						<threshold>Low</threshold>
						<xmlOutput>true</xmlOutput>
						<skip>${skip.static.analysis}</skip>
					</configuration>
					<executions>
						<execution>
							<goals>
								<goal>check</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-pmd-plugin</artifactId>
					<version>3.1</version>
					<configuration>
						<format>xml</format>
						<targetJdk>1.7</targetJdk>
						<failOnViolation>false</failOnViolation>
						<skip>${skip.static.analysis}</skip>
					</configuration>
					<executions>
						<execution>
							<goals>
								<goal>check</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>com.gentics</groupId>
					<artifactId>changelog-manager-plugin</artifactId>
					<version>2.3.8</version>
				</plugin>
				<plugin>
					<groupId>com.gentics</groupId>
					<artifactId>dependency-reporting-plugin</artifactId>
					<version>1.0.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-assembly-plugin</artifactId>
					<version>2.4</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-failsafe-plugin</artifactId>
					<version>2.22.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-source-plugin</artifactId>
					<version>2.1.2</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<version>2.3.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-javadoc-plugin</artifactId>
					<version>2.9.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-deploy-plugin</artifactId>
					<version>2.7</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.11.0</version>
					<configuration>
						<executable>${env.JAVA_HOME}/bin/javac</executable>
						<verbose>true</verbose>
						<fork>true</fork>
						<release>17</release>
						<maxmem>1024m</maxmem>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-project-info-reports-plugin</artifactId>
					<version>2.7</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-dependency-plugin</artifactId>
					<version>3.1.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-site-plugin</artifactId>
					<version>3.3</version>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>cobertura-maven-plugin</artifactId>
					<version>2.5.1</version>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>exec-maven-plugin</artifactId>
					<version>1.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-shade-plugin</artifactId>
					<version>2.1</version>
				</plugin>
				<plugin>
					<groupId>org.codehaus.enunciate</groupId>
					<artifactId>maven-enunciate-plugin</artifactId>
					<version>${enunciate.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-war-plugin</artifactId>
					<version>2.3</version>
				</plugin>
				<plugin>
					<groupId>ro.isdc.wro4j</groupId>
					<artifactId>wro4j-maven-plugin</artifactId>
					<version>1.9.0</version>
				</plugin>
				<plugin>
					<groupId>nl.windgazer</groupId>
					<artifactId>jsdoctk-plugin</artifactId>
					<version>2.3.2</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>${surefire.version}</version>
					<configuration>
						<argLine>@{argLine} ${surefireArgLine}</argLine>
						<jvm>${test.jvm.home}/bin/java</jvm>
						<skip>${skip.unit.tests}</skip>
						<forkCount>${surefire.forkcount}</forkCount>
						<reuseForks>false</reuseForks>
						<!-- Don't execute more than one test per jvm fork! -->
						<testFailureIgnore>true</testFailureIgnore>
						<runOrder>random</runOrder>
						<trimStackTrace>false</trimStackTrace>
						<rerunFailingTestsCount>${surefire.rerunFailingTestsCount}</rerunFailingTestsCount>
						<excludes>
							<!-- Exclude integration tests within (unit) test phase. -->
							<exclude>**/*AbstractTest.java</exclude>
							<exclude>**/*Abstract*.java</exclude>
							<exclude>**/Abstract*.java</exclude>
							<exclude>**/*Abstract*Test.java</exclude>
							<!-- The test MeshPortalPreviewSslTest is excluded, because for some (unknown) reason it always fails on Jenkins (due to timeouts) -->
							<exclude>**/MeshPortalPreviewSslTest.java</exclude>
						</excludes>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>jslint-maven-plugin</artifactId>
					<version>1.0.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-release-plugin</artifactId>
					<version>2.5</version>
				</plugin>
				<plugin>
					<groupId>com.sun.tools.jxc.maven2</groupId>
					<artifactId>maven-jaxb-schemagen-plugin</artifactId>
					<version>1.2</version>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>build-helper-maven-plugin</artifactId>
					<version>1.5</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-antrun-plugin</artifactId>
					<version>1.6</version>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>versions-maven-plugin</artifactId>
					<version>2.16.2</version>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<pluginRepositories>
		<pluginRepository>
			<name>oss.sonatype.org</name>
			<id>oss.sonatype.org</id>
			<url>http://oss.sonatype.org/content/groups/public</url>
		</pluginRepository>
		<pluginRepository>
			<id>jsdoctk2</id>
			<name>Mulesoft</name>
			<url>https://repository.mulesoft.org/nexus/content/groups/public</url>
		</pluginRepository>
		<pluginRepository>
			<id>gentics.nexus.releases</id>
			<name>Gentics Nexus Maven Repository</name>
			<url>https://repo.gentics.com/repository/maven-releases/</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</pluginRepository>
		<pluginRepository>
			<id>gentics.nexus.releases-oss</id>
			<name>Gentics Nexus OSS Maven Repository</name>
			<url>https://repo.gentics.com/repository/maven-releases-oss/</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</pluginRepository>
		<pluginRepository>
			<id>gentics.nexus.thirdparty</id>
			<name>Gentics Nexus Thirdparty Repository</name>
			<url>https://repo.gentics.com/repository/maven-thirdparty/</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</pluginRepository>
		<pluginRepository>
			<id>maven-repository.dev.java.net</id>
			<name>Java.net Maven 2 Repository</name>
			<url>http://download.java.net/maven/2</url>
		</pluginRepository>
		<pluginRepository>
			<id>maven2-repository</id>
			<name>Maven 2 Repo</name>
			<url>http://repo2.maven.org/maven2</url>
		</pluginRepository>
	</pluginRepositories>

	<repositories>
		<repository>
			<id>gentics.nexus.releases-oss</id>
			<name>Gentics Nexus OSS Maven Repository</name>
			<url>https://repo.gentics.com/repository/maven-releases-oss/</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>gentics.nexus.releases</id>
			<name>Gentics Nexus Maven Repository</name>
			<url>https://repo.gentics.com/repository/maven-releases/</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>gentics.nexus.snapshots</id>
			<name>Gentics Snapshots Repository</name>
			<url>https://repo.gentics.com/repository/maven-snapshots/</url>
			<releases>
				<enabled>false</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>gentics.nexus.thirdparty</id>
			<name>Gentics Nexus Thirdparty Repository</name>
			<url>https://repo.gentics.com/repository/maven-thirdparty/</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>jboss-repository</id>
			<name>JBoss Repository</name>
			<url>http://repository.jboss.org/maven2</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
	</repositories>

	<distributionManagement>
		<repository>
			<id>gentics.nexus.releases-oss</id>
			<name>Gentics Nexus OSS Maven Repository</name>
			<url>https://repo.gentics.com/repository/maven-releases-oss/</url>
		</repository>
		<snapshotRepository>
			<id>gentics.nexus.snapshots</id>
			<name>Gentics Snapshots Repository</name>
			<url>https://repo.gentics.com/repository/maven-snapshots/</url>
		</snapshotRepository>
	</distributionManagement>
</project>
